force-app/main/default/objects/Player_Stats__c/Player_Stats__c.object-meta.xml
<CustomObject>
    <label>Player Stats</label>
    <nameField>
        <label>Player Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Player Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>