force-app/main/default/objects/Player_Stats__c/fields/Player_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Name__c</fullName>
    <label>Player Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>