force-app/main/default/objects/Player_Stats__c/fields/Player_Role__c.field-meta.xml
<CustomField>
    <fullName>Player_Role__c</fullName>
    <label>Player Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batsman</fullName>
                <default>true</default>
                <label>Batsman</label>
            </value>
            <value>
                <fullName>Bowler</fullName>
            </value>
            <value>
                <fullName>All-rounder</fullName>
            </value>
            <value>
                <fullName>Wicketkeeper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>