force-app/main/default/objects/Player_Stats__c/fields/Runs_Scored__c.field-meta.xml
<CustomField>
    <fullName>Runs_Scored__c</fullName>
    <label>Runs Scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>